--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andrey Kudinov</title>
+    <meta name="author" content="Andrey Kudinov">
+    <meta property="og:title" content="Andrey Kudinov">
+    <meta property="og:url" content="https://andrey-kudinov.netlify.app/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="">
+    <meta property="og:description" content="">
+    <meta property="og:site_name" content="Andrey Kudinov Blog">
+    <meta name="twitter:card" content="">
+    <meta name="twitter:site" content="@andrey__kudinov">
+    <meta name="twitter:title" content="Andrey Kudinov">
+    <meta name="twitter:url" content="https://andrey-kudinov.netlify.app/">
+    <meta name="twitter:description" content="">
+    <meta name="twitter:image" content="">
   </head>
   <body>
     <div id="root">
